--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </li>
           <li class="item">
             <a class="addres-link" href="tel:+380961111111">
-              <svg class="address-icon" width="16" height="12">
+              <svg class="address-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -70,31 +70,13 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title visually-hidden">Особенности</h2>
-          <ul class="speshialyties">
-            <li class="speshialyties-item">
-              <svg class="speshialyties-icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
-            </li>
-            <li class="speshialyties-item">
-              <svg class="speshialyties-icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
-            </li>
-            <li class="speshialyties-item">
-              <svg class="speshialyties-icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
-            </li>
-            <li class="speshialyties-item">
-              <svg class="speshialyties-icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
-            </li>
-          </ul>
-
           <ul class="menu">
             <li class="menu-items">
+              <div class="speshialyties-item">
+                <svg class="speshialyties-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-title">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по
@@ -102,6 +84,11 @@
               </p>
             </li>
             <li class="menu-items">
+              <div class="speshialyties-item">
+                <svg class="speshialyties-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
@@ -109,6 +96,11 @@
               </p>
             </li>
             <li class="menu-items">
+              <div class="speshialyties-item">
+                <svg class="speshialyties-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
@@ -116,6 +108,11 @@
               </p>
             </li>
             <li class="menu-items">
+              <div class="speshialyties-item">
+                <svg class="speshialyties-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-title">Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
@@ -427,7 +424,7 @@
                 target="_blank"
                 rel="noopener noreferer"
               >
-                <svg class="clients-list-image" width="106" height="60">
+                <svg class="clients-list-image" width="41" height="46.7">
                   <use href="./images/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
@@ -440,7 +437,7 @@
                 target="_blank"
                 rel="noopener noreferer"
               >
-                <svg class="clients-list-image" width="106" height="60">
+                <svg class="clients-list-image" width="40" height="52">
                   <use href="./images/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
@@ -453,7 +450,7 @@
                 target="_blank"
                 rel="noopener noreferer"
               >
-                <svg class="clients-list-image" width="106" height="60">
+                <svg class="clients-list-image" width="43.46" height="41.18">
                   <use href="./images/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
@@ -466,7 +463,7 @@
                 target="_blank"
                 rel="noopener noreferer"
               >
-                <svg class="clients-list-image" width="106" height="60">
+                <svg class="clients-list-image" width="84.44" height="40.62">
                   <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
@@ -479,7 +476,7 @@
                 target="_blank"
                 rel="noopener noreferer"
               >
-                <svg class="clients-list-image" width="106" height="60">
+                <svg class="clients-list-image" width="62.54" height="45.43">
                   <use href="./images/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
@@ -492,7 +489,7 @@
                 target="_blank"
                 rel="noopener noreferer"
               >
-                <svg class="clients-list-image" width="106" height="60">
+                <svg class="clients-list-image" width="93.79" height="43.93">
                   <use href="./images/icons.svg#icon-logo-6"></use>
                 </svg>
               </a>
