--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         <h1 class="secton-title-herro">
           Эффективные решения для вашего бизнеса
         </h1>
-        <button type="button" class="button-herro">Заказать услугу</button>
+        <button type="button" class="button-herro" data-modal-open>
+          Заказать услугу
+        </button>
       </section>
       <!--Особенности-->
       <section class="section">
@@ -585,5 +587,17 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn-close" data-modal-close>
+          <svg class="modal-btn-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-close-black-18dp"></use>
+          </svg>
+        </button>
+        <p class="modal-title"></p>
+        <p></p>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
