--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                 width="370"
                 class="card-image"
               />
+              <div class="we-doo-text">
+                <p class="text">Десктопные приложения</p>
+              </div>
             </li>
             <li class="menu-items">
               <img
@@ -145,6 +148,9 @@
                 width="370"
                 class="card-image"
               />
+              <div class="we-doo-text">
+                <p class="text">Мобильные приложения</p>
+              </div>
             </li>
             <li class="menu-items">
               <img
@@ -153,6 +159,9 @@
                 width="370"
                 class="card-image"
               />
+              <div class="we-doo-text">
+                <p class="text">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
