--- a/portfolio.html
+++ b/portfolio.html
@@ -83,151 +83,251 @@
 
           <ul class="list">
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/tehnograb.jpg"
-                    alt="Экран ноутбука с тремя людьми"
-                    width="370"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/tehnograb.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">Технокряк</h2>
                     <p>Веб-сайт</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/poster.jpg"
-                    alt="Постер"
-                    width="370"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/poster.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">
                       Постер New Orlean vs Golden Star
                     </h2>
                     <p>Дизайн</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/seafood.jpg"
-                    alt="Логотип ресторана морской еды"
-                    width="370"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/seafood.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">Ресторан Seafood</h2>
                     <p>Приложение</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/headphones.jpg"
-                    alt="Наушники"
-                    width="370"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/headphones.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">Проект Prime</h2>
                     <p>Маркетинг</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/boxes.jpg"
-                    alt="Коробки"
-                    width="370"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/boxes.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">Проект Boxes</h2>
                     <p>Приложение</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/inspiration.jpg"
-                    alt="Монитор с программой"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/inspiration.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">
                       Inspiration has no Borders
                     </h2>
                     <p>Веб-сайт</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/magazine.jpg"
-                    alt="Раскрытый журнал"
-                    width="370"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/magazine.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">Издание Limited Edition</h2>
                     <p>Дизайн</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/project.jpg"
-                    alt="Ярлык с надписью"
-                    width="370"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/project.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">Проект LAB</h2>
                     <p>Маркетинг</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="list-card">
-              <article class="card">
-                <a href="" class="works"
-                  ><img
-                    src="./images/groving.jpg"
-                    alt="Печатают на ноутбуке"
-                    width="370"
-                    class="card-image"
-                  />
+              <a href="" class="works">
+                <article class="card">
+                  <div class="thumb">
+                    <img
+                      src="./images/groving.jpg"
+                      alt="Экран ноутбука с тремя людьми"
+                      width="370"
+                      class="card-image"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="card-content">
                     <h2 class="section-title cards">Growing Business</h2>
                     <p>Приложение</p>
-                  </div></a
-                >
-              </article>
+                  </div>
+                </article>
+              </a>
             </li>
           </ul>
         </div>
